...
                    }
                }

                if let url = message.url {
                    Section {
                        Link(localizationManager.localized("open_link"), destination: url)
                            .accessibilityIdentifier("action.message.open_link")
                    }
                }

                Section {
                    if !message.isRead {
                        Button {
...
